Correct support spacing

--- a/assets/scss/_support.scss
+++ b/assets/scss/_support.scss
@@ -11,7 +11,7 @@
   }
   &__buttons {
     padding-top: .5em;
-    padding-bottom: 1.5em;
+    padding-bottom: 2.5em;
   }
   &__button {
     // display: inline-block;
